test_resources/lit_class/errors/test1.yr


class A {
    pub self () {}

    pub fn bar (self) {}
    pub fn foo (self) {
        bar ();
    }
}
